# Meeting-Planner

./: .gitignore  .~lock.timesheet.ods#  .~lock.timesheet.xls#  CMakeLists.txt  Doxyfile  PlanTmpl20.xls  PlanTmpl21.xls  README.md  TODO.txt  output.dot  output.txt  timesheet-2.0.xls  timesheet.ods  timesheet.xls
file_utils/: FileUtils.cpp  FileUtils.h
latex/: md_README.tex
src/: App.cpp  App.h  AppExp.h  AppTests.h  Apptests.h  Building.cpp  Building.h  Campus.cpp  Campus.h  Date.cpp  Date.h  DateTest.cpp  DateTest.h  DateTests.h  DesignByContract.h  Meeting.cpp  Meeting.h  MeetingTest.h  MeetingTests.h  ParseFileTests.h  Parser.cpp  Parser.h  Participation.cpp  Participation.h  ParticipationTest.h  ParticipationTests.h  ProcessMeetingsTests.h  Room.cpp  Room.h  RoomTest.h  RoomTests.h  TypeDefs.h  WriteToStreamTest.h  XmlParser.cpp  XmlParser.h  main.cpp  tests.cpp
src/containers/: Containers.h  MeetingRegistry.cpp  MeetingRegistry.h
src/error/: ConciseError.cpp  ConciseError.h  ConsiseError.cpp  ConsiseError.h  DetailedError.cpp  DetailedError.h  Error.cpp  Error.h  MuteError.cpp  MuteError.h
src/helper/: DesignByContract.h
src/objects/: Building.cpp  Building.h  Campus.cpp  Campus.h  Catering.cpp  Catering.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  Meeting.cpp  Meeting.h  MeetingRegistry.cpp  MeetingRegistry.h  Participation.cpp  Participation.h  Room.cpp  Room.h  User.cpp  User.h
src/output/: DotOutput.cpp  DotOutput.h  Output.cpp  Output.h  StreamOutput.cpp  StreamOutput.h  TextOutput.cpp  TextOutput.h
src/parser/: Elements.h  Parser.cpp  Parser.h  XmlParser.cpp  XmlParser.h
src/tests/: TestApp.h  TestBuilding.h  TestCampus.h  TestCatering.h  TestDate.h  TestDateTime.h  TestMeeting.h  TestMeetingRegistry.h  TestParseFile.h  TestParticipation.h  TestProcessMeetings.h  TestRoom.h  TestUser.h  TestWriteToStream.h  TestWriteToStreamDot.h
test-files/: Catering.xml  ConflictMeetings1.xml  ConflictMeetings2.xml  HappyDay1-expected.txt  HappyDay1.xml  HappyDay2-expected.txt  HappyDay2.xml  HappyDay3.xml  InvalidData1-errors-expected.txt  InvalidData1.xml  InvalidData2-errors-actual.txt  InvalidData2-errors-expected.txt  InvalidData2.xml  InvalidDataLayout.xml  InvalidDataSystemErrors.xml  InvalidDataUsers.xml  InvalidXml.xml  Processed-actual.txt  Renovations.xml  TestParseFile.FileNotFound-errors-expected.txt  TestParseFile.InvalidData1-errors-actual.txt  TestParseFile.InvalidData1-errors-expected.txt  TestParseFile.InvalidData2-errors-actual.txt  TestParseFile.InvalidData2-errors-expected.txt  TestParseFile.InvalidDataLayout-errors-actual.txt  TestParseFile.InvalidDataUsers-errors-expected.txt  TestParseFile.InvalidXml-errors-expected.txt  TestWriteToStreamDot.Empty-expected.dot  TestWriteToStreamDot.HappyDay1-actual.dot  TestWriteToStreamDot.HappyDay2-actual.dot  TestWriteToStreamDot.HappyDay3-expected.dot  WriteToStreamTests.Empty-expected.txt  WriteToStreamTests.HappyDay1-actual.txt  WriteToStreamTests.HappyDay1-expected.txt  WriteToStreamTests.HappyDay2-actual.txt  WriteToStreamTests.HappyDay2-expected.txt  WriteToStreamTests.Processed-actual.txt  WriteToStreamTests.Processed-expected.txt
tools/: ContractsDocumentationGenerator.cpp  ContractsDocumentationGenerator.h
xml_parser/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
xml_parser/include/: tinyxml.h
